Create user_board table
