# app/Http/Controllers/Api/V1/UsersController.php
@@ -4,13 +4,11 @@ namespace App\Http\Controllers\Api\V1;
 
 use App\Http\Controllers\Controller;
 use App\Models\User;
-use Illuminate\Http\Client\Response as ClientResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Response;
-use Illuminate\Support\Facades\Session;
 
 /**
  * @OA\Info(title="Laravel Kanban API", version="0.1")
@@ -208,73 +206,5 @@ class UsersController extends Controller
     public function destroy(string $id)
     {
         //
-    }
-
-    /* ------------- REGISTER USER ------------ */
-    /**
-     * @OA\Get(
-     *     path="/api/v1/users/register",
-     *     @OA\Response(response="200", description="User registration")
-     * )
-    */
-    public function register(Request $request)
-    {
-        $user = new User;
-
-        if (empty($request->firstname)){
-            return 'A lastname is required';
-
-        } else {
-            $firstname = $request->firstname;
-            if (!preg_match("/^[a-zA-Z-' ]*$/",$firstname)) {
-            return "Only letters and white space allowed";
-            }
-        }
-
-        if (empty($request->lastname)){
-            return 'A lastname is required';
-        } else {
-            $lastname = $request->lastname;
-            if (!preg_match("/^[a-zA-Z-' ]*$/",$lastname)) {
-            return "Only letters and white space allowed";
-            }
-        }
-
-        if (empty($request->email)){
-            return 'An email is required';
-        } else {
-            if (!filter_var($request->email, FILTER_VALIDATE_EMAIL)) {
-                return "Invalid email format";
-            }
-        }
-
-        if (empty($request->password)){
-            return 'A password is required';
-        } else {
-
-            $password = $request->password;
-
-            $uppercase = preg_match('@[A-Z]@', $password);
-            $lowercase = preg_match('@[a-z]@', $password);
-            $number    = preg_match('@[0-9]@', $password);
-    
-            if(!$uppercase || !$lowercase || !$number || strlen($password) < 8) {
-                return 'Password not correct, need : 8 caracters, 1 uppercase, 1 lowercase and 1 number';
-            }
-        }
-
-        if (User::where('email', '=', $request->email)->exists()) {
-            return 'Email already use.';
-        } else {
-            $user->firstname = $request->firstname;
-            $user->lastname = $request->lastname;
-            $user->email = $request->email;
-            $user->password = $request->password;
-            $user->right_id = 1;
-            $user->save();
-            
-            return $user::find($user->id);
-        }
-
     }
 }
